--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -22,7 +22,7 @@
 			<span class="main-button"> <a th:href="@{/main}">[[#{mainPage}]]</a></span>
 		</div>
 		<div class="main">
-			<span class="main-button"> <a th:href="@{/comparision}">[[#{comparision}]]</a></span>
+			<span class="main-button"> <a th:href="@{/compare}">[[#{comparision}]]</a></span>
 		</div>
 		<div th:replace="~{fragments/search :: dropdown-search}"></div>
 		<div th:replace="~{fragments/dropdownCart :: dropdown-shopping-cart}"></div>
@@ -111,12 +111,13 @@
 							<form th:action="@{/compare}" method="post"
 								th:object="${product}">
 								<input type="hidden" th:attr="name='productName'"
-									th:value="${product.getProductName()}" /> <input
-									type="hidden" th:attr="name='shopName'"
-									th:value="${product.getShopName()}" /> <input type="hidden"
-									th:attr="name='price'" th:value="${product.getPrice()}" />
-									<input type="hidden"
-									th:attr="name='uri'" th:value="${product.getUrl()}" />
+									th:value="${product.getProductName()}" /> <input type="hidden"
+									th:attr="name='shopName'" th:value="${product.getShopName()}" />
+								<input type="hidden" th:attr="name='price'"
+									th:value="${product.getPrice()}" /> <input type="hidden"
+									th:attr="name='uri'" th:value="${product.getUrl()}" /> <input
+									type="hidden" th:attr="name='imageUrl'"
+									th:value="${product.getImageUrl()}" />
 								<button type="submit" value="submit" th:text="#{compare}"></button>
 							</form></td>
 					</tr>
