Format description for products and add buttons to comparator page

--- a/src/main/resources/templates/comparator.html
+++ b/src/main/resources/templates/comparator.html
@@ -9,63 +9,85 @@
 	crossorigin="anonymous" />
 
 <link rel="stylesheet" th:href="@{/compare.css}">
-    <style>
-        td>img {
-            width: 100%;
-            height: 250px;
-            object-fit: contain;
-        }
-    </style>
+<style>
+td>img {
+	width: 100%;
+	height: 250px;
+	object-fit: contain;
+}
+</style>
 </head>
 <body>
-	    <h1 class="display-5 my-5 text-center">Compare Page in JS</h1>
-    <div class="container">
-        <div class="col-md-9 mx-auto">
-            <table class="table">
-                <tr class="bg-light">
-                    <th>Select Product</th>
-                    <th width="600px" style="color:white; font-size:25pt;">
-                        [[${compareProduct[1].getProductName()}]]
-                    </th>
-                    <th width="600px" style="color:white; font-size:25pt;">
-                        [[${compareProduct[2].getProductName()}]]
-                    </th>
-                </tr>
-                <br>
-                <br>
-                <tr>
-                    <th>Product Image</th>
-                    <td>
-                        <img th:src="${compareProduct[1].getImageUrl()}"
-                            id="img1" alt=" ">
-                    </td>
-                    <td>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/No-Image-Placeholder.svg/1665px-No-Image-Placeholder.svg.png"
-                            id="img2" alt=" ">
-                    </td>
-                </tr>
-                <tr>
-                    <th>Product Price</th>
-                    <td width="600px" style="color:white; font-size:25pt;" id="price1">[[${compareProduct[1].getPrice()}]]</td>
-                    <td width="600px" style="color:white; font-size:25pt;" id="price2">[[${compareProduct[2].getPrice()}]]</td>
-                </tr>
-                <tr>
-                    <th>Product Description</th>
-                    <td width="600px" style="color:white; font-size:25pt;" id="desc1"><pre>[[${compareProduct[1].getDescription()}]]</pre></td>
-                    <td width="600px" style="color:white; font-size:25pt;" id="desc2"><pre>[[${compareProduct[2].getDescription()}]]</pre></td>
-                </tr>
-                <tr>
-                    <th>Product Brand</th>
-                    <td id="brand1">N/A</td>
-                    <td id="brand2">N/A</td>
-                </tr>
-            </table>
+	<h1 style="color: white;" class="display-5 my-5 text-center">[[#{comparision}]]</h1>
+	<div class="container">
+		<div class="col-md-9 mx-auto">
+			<table class="table">
+				<tr class="bg-light">
+					<th></th>
+					<th width="600px" style="color: white; font-size: 25pt;">
+						[[${compareProduct[1].getProductName()}]]</th>
+					<th width="600px" style="color: white; font-size: 25pt;">
+						[[${compareProduct[2].getProductName()}]]</th>
+				</tr>
+				<br>
+				<br>
+				<tr>
+					<th></th>
+					<td><img
+						th:src="${compareProduct[1].getImageUrl() != null} ? ${compareProduct[1].getImageUrl()} : 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/No-Image-Placeholder.svg/1665px-No-Image-Placeholder.svg.png'"
+						id="img1" alt=" "></td>
+					<td><img
+						th:src="${compareProduct[2].getImageUrl() != null} ? ${compareProduct[2].getImageUrl()} : 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/No-Image-Placeholder.svg/1665px-No-Image-Placeholder.svg.png'"
+						id="img2" alt=" "></td>
+				</tr>
+				<tr>
+					<th style="color: white;"></th>
+					<td width="600px" style="color: white; font-size: 25pt;"
+						id="price1">[[${compareProduct[1].getPrice()}]]</td>
+					<td width="600px" style="color: white; font-size: 25pt;"
+						id="price2">[[${compareProduct[2].getPrice()}]]</td>
+				</tr>
+				<tr>
+					<th style="color: white;"></th>
+					<td width="600px" style="color: white; font-size: 25pt;" id="desc1"><pre
+							style="font-size: 18px">[[${compareProduct[1].getDescription()}]]</pre></td>
+					<td width="600px" style="color: white; font-size: 25pt;" id="desc2"><pre
+							style="font-size: 18px">[[${compareProduct[2].getDescription()}]]</pre></td>
+				</tr>
+				<tr>
+					<th style="color: white;"></th>
+					<td style="color: white;" id="brand1">[[${compareProduct[1].getShopName()}]]</td>
+					<td style="color: white;" id="brand2">[[${compareProduct[2].getShopName()}]]</td>
+				</tr>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
+				<tr></tr>
+				<tr>
+					<th style="color: white;"></th>
+					<td style="color: white;" id="brand1"><button type="submit"
+							value="submit" th:text="#{addBasket}"></button></td>
+					<td style="color: white;" id="brand2"><button type="submit"
+							value="submit" th:text="#{addBasket}"></button></td>
+				</tr>
+				<tr>
+					<th style="color: white;"></th>
+					<td style="color: white;" id="btn1"><button type="submit"
+							value="submit" th:text="#{delete}"></button></td>
+					<td style="color: white;" id="btn2"><button type="submit"
+							value="submit" th:text="#{delete}"></button></td>
+				</tr>
+			</table>
 
-        </div>
-    </div>
+		</div>
+	</div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js "></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js "></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js "></script>
 </body>
 </html>
