--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -94,7 +94,7 @@
 							alt="${product.getImageUrl()}" class="img-fluid" width=200
 							height=200 /></td>
 						<td><form th:action="@{addProduct}" method="post"
-								th:object="${compareProduct}">
+								th:object="${product}">
 								<input type="hidden" th:attr="name='productName'"
 									th:value="${product .getProductName()}" /> <input
 									type="hidden" th:attr="name='shopName'"
@@ -119,7 +119,7 @@
 									type="hidden" th:attr="name='imageUrl'"
 									th:value="${product.getImageUrl()}" /> <input type="hidden"
 									th:name="currentUrl" th:value="${currentUrl}" />
-								<button type="submit" value="submit" th:text="#{compare}"></button>
+								<button th:if="${comparatorFull}" type="submit" value="submit" th:text="#{compare}"></button>
 							</form></td>
 					</tr>
 				</tbody>
