Add comparator buttons to request page

--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -23,6 +23,9 @@
 		<div class="main">
 			<span class="main-button"> <a th:href="@{/main}">[[#{mainPage}]]</a></span>
 		</div>
+				<div class="main">
+			<span class="comparator-button"> <a th:href="@{/comparator}">[[#{comparision}]]</a></span>
+		</div>
 		<div th:replace="~{fragments/search :: dropdown-search}"></div>
 		<div th:replace="~{fragments/dropdownCart :: dropdown-shopping-cart}"></div>
 	</header>
@@ -34,9 +37,9 @@
 				<p class="h5 infoText" th:text="#{searchValue}"></p>
 				<h2>[[${searchValue}]]</h2>
 				<input class="form-control-lg" type="number" min="0" max="100"
-					step="1" th:placeholder="${discountValue}" th:value="${discountValue}"
-					name="discountValue" /> <input type="hidden" name="currentUrl"
-					th:value="${currentUrl}" />
+					step="1" th:placeholder="${discountValue}"
+					th:value="${discountValue}" name="discountValue" /> <input
+					type="hidden" name="currentUrl" th:value="${currentUrl}" />
 				<button type="submit" value="submit" th:text="ENTER"></button>
 			</form>
 			<br>
@@ -141,8 +144,24 @@
 									th:attr="name='url'" th:value="${product.getUrl()}" /> <input
 									type="hidden" th:attr="name='imageUrl'"
 									th:value="${product.getImageUrl()}" /> <input type="hidden"
-									name="currentURL" th:value="${currentURL}" />
+									name="currentURL" th:value="${currentUrl}" />
 								<button type="submit" value="submit" th:text="#{addBasket}"></button>
+							</form>
+							</br>
+						</br>
+							<form th:action="@{/compare}" method="post"
+								th:object="${product}">
+								<input type="hidden" th:attr="name='productName'"
+									th:value="${product.getProductName()}" /> <input type="hidden"
+									th:attr="name='shopName'" th:value="${product.getShopName()}" />
+								<input type="hidden" th:attr="name='price'"
+									th:value="${product.getPrice()}" /> <input type="hidden"
+									th:attr="name='uri'" th:value="${product.getUrl()}" /> <input
+									type="hidden" th:attr="name='imageUrl'"
+									th:value="${product.getImageUrl()}" /> <input type="hidden"
+									th:name="currentUrl" th:value="${currentUrl}" />
+								<button th:if="${comparatorFull}" type="submit" value="submit"
+									th:text="#{compare}"></button>
 							</form></td>
 					</tr>
 				</tbody>
