--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -177,6 +177,11 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 									<button type="submit" value="submit" class="btn btn-info"
 										th:text="RESET"></button>
 								</form>
+								<form th:action="@{/createDocument}" th:method="get">
+									<input type="hidden" name="currentUrl" th:value="${currentUrl}" />
+									<button th:if="false" type="submit" value="submit" class="btn btn-info"
+										th:text="GENERATE"></button>
+								</form>
 							</div>
 						</div>
 					</div>
